# whitepyges

./: .gitignore  404.html  coverage.html  credits.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  setup.py
.github/workflows/: publish.yml  site.yml
api/: address.html  person.html  phone.html
docs/: index.md
docs/api/: address.md  person.md  phone.md
docs/guides/: usage.md
docs/responses/phone/: search.json
guides/: usage.html
responses/address/: search.json
responses/person/: search.json
search/: search_index.json
src/whitepyges/: address.py  person.py  phone.py  requirements.txt
tests/: conftest.py
