[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whitepyges"
version = "0.3a"
description = "Unofficial Python client for Whitepages"
authors = [{ name = "Will Hellinger", email = "111201130+Will-Hellinger@users.noreply.github.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "black"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-minify-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-coverage",
    "pymdown-extensions"
]

[tool.setuptools]
packages = ["whitepyges"]
package-dir = {"" = "src"}
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.package-data]
whitepyges = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
